--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12 col-md-4 col-xl-6 mb-4 mb-md-0">
             <p class="mb-0 text-center text-lg-start">
-                &copy; <a class="text-primary fw-normal" href="https://wooshelf.com" target="_blank">Wooshelf</a>
+                &copy; <a class="text-primary fw-normal" href="#" target="_blank">AstroStone</a>
                 - Coded by <a href="https://wooshelf.com" target="_blank">wooshelf</a>.
             </p>
         </div>
@@ -11,7 +11,7 @@
             <ul class="list-inline list-group-flush list-group-borderless text-md-end mb-0">
                 <li class="list-inline-item px-0 px-sm-2">
                     <a target="_blank" 
-                       href="https://appseed.us/admin-dashboards/django-dashboard-volt">Food Dashboard</a>
+                       href="https://appseed.us/admin-dashboards/django-dashboard-volt">Astro Stone Admin</a>
                 </li>
             </ul>
         </div>
