--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -73,74 +73,59 @@
     </div>
     <div class="card-body cus_form row">
         
-            <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
-            
-                {% comment %} <span class="text-primary col text-center align-self-center text-lg p-1"> <i class="fas fa-user"></i></span> {% endcomment %}
-                <div class="col p-1">
-                    <div class="card-counter info">
-                        <i class="fa fa-users"></i>
-                        <span class="count-numbers">{{total_user}}</span><br/>
-                        <span class="count-name">Total Users</span>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
-                {% comment %} <span class="text-success col text-center align-self-center text-lg p-1"><i class="fas fa-calendar"></i> </span> {% endcomment %}
-
-                <div class="col p-1">
-                    <div class="card-counter danger">
-                        <i class="fas fa-network-wired"></i>
-                        <span class="count-numbers">{{total_categories}}</span><br/>
-                        <span class="count-name">Total Categories</span>
-                    </div>
-                    
-                </div>
-            </div>
-
-            <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
-
-                {% comment %} <span class="text-danger fa-coins fa col text-center align-self-center text-lg p-1"></span> {% endcomment %}
-                <div class="col p-1">
-                    <div class="card-counter success">
-                        <i class="fas fa-images"></i>
-                        <span class="count-numbers">{{total_products}}</span><br/>
-                        <span class="count-name">Total Products</span>
-                    </div>
-                
-                </div>
-            </div>
-
+        <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
         
-            <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
-                {% comment %} <span class="text-danger fa fa-money-check-alt text-primary col text-center align-self-center text-lg p-1"></span> {% endcomment %}
-
-                <div class="col p-1">
-                    <div class="card-counter primary">
-                        <i class="fas fa-calendar"></i>
-
-                        <span class="count-numbers">{{xyz}}</span><br/>
-                        <span class="count-name">Data</span>
-                    </div>
-                
+            {% comment %} <span class="text-primary col text-center align-self-center text-lg p-1"> <i class="fas fa-user"></i></span> {% endcomment %}
+            <div class="col p-1">
+                <div class="card-counter info">
+                    <i class="fa fa-users"></i>
+                    <span class="count-numbers">{{total_user}}</span><br/>
+                    <span class="count-name">Total Users</span>
                 </div>
             </div>
+        </div>
 
-            <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
-                {% comment %} <span class="fa-coins fa text-primary col text-center align-self-center text-lg p-1"></span> {% endcomment %}
-                <div class="col p-1">
-                    <div class="card-counter info">
-                        <i class="fas fa-utensils"></i>
-                        <span class="count-numbers">{{xyx}}</span><br/>
-                        <span class="count-name">Data</span>
-                    </div>
-                
-                    
+
+        <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
+            {% comment %} <span class="text-success col text-center align-self-center text-lg p-1"><i class="fas fa-calendar"></i> </span> {% endcomment %}
+
+            <div class="col p-1">
+                <div class="card-counter danger">
+                    <i class="fas fa-network-wired"></i>
+                    <span class="count-numbers">{{total_categories}}</span><br/>
+                    <span class="count-name">Total Categories</span>
                 </div>
+                
             </div>
+        </div>
 
-       
+        <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
+
+            {% comment %} <span class="text-danger fa-coins fa col text-center align-self-center text-lg p-1"></span> {% endcomment %}
+            <div class="col p-1">
+                <div class="card-counter success">
+                    <i class="fas fa-images"></i>
+                    <span class="count-numbers">{{total_products}}</span><br/>
+                    <span class="count-name">Total Products</span>
+                </div>
+            
+            </div>
+        </div>
+
+    
+        <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
+            {% comment %} <span class="text-danger fa fa-money-check-alt text-primary col text-center align-self-center text-lg p-1"></span> {% endcomment %}
+
+            <div class="col p-1">
+                <div class="card-counter primary">
+                    <i class="fas fa-list"></i>
+
+                    <span class="count-numbers">{{total_orders}}</span><br/>
+                    <span class="count-name">Total Orders</span>
+                </div>
+            
+            </div>
+        </div>
     </div>
 </div>
 
@@ -148,26 +133,106 @@
 <div class="card">
     <!-- Card header -->
     <div class="card-header border-0">
-        <h6 class="mb-0"> Data </h6>
+        <h6 class="mb-0"> Pending Orders </h6>
     </div>
     <!-- Light table -->
     <div class="card-body">
         <div class="table-responsive">
+            <table class="table table-hover" id="example1">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col" class="sort">SN</th>
+                        <th scope="col" class="sort">Order-ID</th>
+                        <th scope="col" class="sort">User</th>
+                        <th scope="col" class="sort">Amount</th>
+                        <th scope="col" class="sort">Status</th>
+                        <th scope="col" class="sort">Date</th>
+                        <th scope="col" class="sort">Address</th>
+                        <th scope="col" class="sort">ZIP Code</th>
+                        <th scope="col" class="sort">Items</th>
+                    </tr>
+                </thead>
+                <tbody class="list">
+                    {% for order in orders %}
+                    <tr>
+                        <td class="budget">
+                            {{forloop.counter}}
+                        </td>
+                        <td>
+                            {{order.order_id}}
+                        </td>
+                        <td>
+                            <div class="media-body">
+                                <span class="name mb-0 text-sm">{{order.user.name}} </span>
+                                {% if order.user.email %}
+                                <p class="name mb-0 text-xs">{{order.user.email}} </p>
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td>
+                            {{order.total_price|floatformat:2}}
+                        </td>
+                        <td>
+                            <select class="border-0 orderStatus" data-order-id="{{ order.id }}">
+                                <option value="PENDING" {% if order.status == "PENDING" %}selected{% endif %}>PENDING</option>
+                                <option value="ORDERED" {% if order.status == "ORDERED" %}selected{% endif %}>ORDERED</option>
+                                <option value="IN-PROGRESS" {% if order.status == "IN-PROGRESS" %}selected{% endif %}>IN-PROGRESS</option>
+                                <option value="DELIVERED" {% if order.status == "DELIVERED" %}selected{% endif %}>DELIVERED</option>
+                                <option value="FAILED" {% if order.status == "FAILED" %}selected{% endif %}>FAILED</option>
+                            </select>
+                        </td>
+                        <td>
+                            {{order.created_at}}
+                        </td>
+                        <td>
+                            {% if order.delivery_address %}{{order.delivery_address}}{% endif %}
+                        </td>
+                        <td>
+                            {% if order.delivery_zip_code %}{{order.delivery_zip_code}} {% endif %}
+                        </td>
+                        <td>
+                            <i class="fa fa-eye" type="button" data-bs-toggle="modal" href="#seeOrderItemsModal{{order.id}}" style="background:transparent;"></i>
+                            <!-- Modal -->
+                            <div class="modal fade" id="seeOrderItemsModal{{order.id}}" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="deleteModalLabel{{category.id}}">Order Products</h5>
+
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <table class="table">
+                                            <tr>
+                                                <th>SN</th>
+                                                <th>Name</th>
+                                                <th>Qty</th>
+                                                <th>Price</th>
+                                            </tr>
+                                            {% for items in order.order_products.all %}
+                                            <tr>
+                                                <td>{{forloop.counter}}</td>
+                                                <td>{{items.product.name}}</td>
+                                                <td>{{items.quantity}}</td>
+                                                <td>{{items.price|floatformat:2}}</td>
+                                            </tr>
+                                            {% endfor %}
+                                        </table>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <!-- end Model -->
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
-    
-  
 </div>  
 {% endif %}
 {% endblock content %}
-{% block javascripts %}
-<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap4.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap4.min.js"></script>
-<script>
-new DataTable('#example1', {
-    responsive: true,
-});
-</script>
-{% endblock javascripts %}
