--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -49,6 +49,15 @@
         </a>
       </li>
 
+      <li class="nav-item {% if request.resolver_match.view_name == 'transactions' %} active {% endif %}">
+        <a href="{% url 'transactions' %}" class="nav-link">
+          <span class="sidebar-icon">
+            <i class="fas fa-list"></i>
+          </span>
+          <span class="sidebar-text">Transactions</span>
+        </a>
+      </li>
+
       <li class="nav-item {% if request.resolver_match.view_name == 'list_categories' %} active {% endif %}">
         <a href="{% url 'list_categories' %}" class="nav-link">
           <span class="sidebar-icon">
