--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -69,18 +69,83 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </a>
                             <div class="dropdown-menu dashboard-dropdown dropdown-menu-end mt-2 py-1">
+                                
+                                <a class="dropdown-item d-flex align-items-center" href="{% url 'edit-user' user.id %}">
+                                    <i class="fas fa-pen me-2" style="font-size:20px"></i>
+                                    Edit
+                                </a>
+                                <div role="separator" class="dropdown-divider my-1"></div>
+                                <a class="dropdown-item d-flex align-items-center" href="{% url 'user-orders' user.id %}">
+                                    <i class="fas fa-list text-purple me-2" style="font-size:20px"></i>
+                                    Orders
+                                </a>
+                                <div role="separator" class="dropdown-divider my-1"></div>
+                                <a class="dropdown-item d-flex align-items-center" href="{% url 'user-tnxs' user.id %}">
+                                    <i class="fas fa-list text-info me-2" style="font-size:20px"></i>
+                                    Transactions
+                                </a>
+                                <div role="separator" class="dropdown-divider my-1"></div>
+                                <a class="dropdown-item d-flex align-items-center" type="button" data-bs-toggle="modal" href="#addressUserModal{{user.id}}">
+                                    <i class="fas fa-location-arrow text-info me-2" style="font-size:20px"></i>
+                                    Addresses
+                                </a>
+                                <div role="separator" class="dropdown-divider my-1"></div>
                                 <a class="dropdown-item d-flex align-items-center" href="{% url 'list_user_cart' user.id %}">
                                     <i class="fas fa-cart-arrow-down me-2" style="font-size:20px"></i>
                                     Cart Items
                                 </a>
                                 <div role="separator" class="dropdown-divider my-1"></div>
-                                {% comment %} <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i class="fas fa-user-circle me-2" style="font-size:20px"></i>
-                                    Profile
-                                </a> {% endcomment %}
+                                <a class="dropdown-item d-flex align-items-center" type="button" data-bs-toggle="modal" href="#deleteUserModal{{user.id}}">
+                                    <i class="fas fa-trash text-danger me-2" style="font-size:20px"></i>
+                                    Delete
+                                </a>
                             </div>
                         </td>
                     </tr>
+
+                    <!-- User Addresses Modal -->
+                    <div class="modal fade" id="addressUserModal{{user.id}}" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">User Address</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <ol>
+                                    {% for address in user.addresses.all %}
+                                    <li>{{address}}<br></li>
+                                    {% endfor %}
+                                </ol>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <!-- end Model -->
+                    
+                    <!-- Delete User Modal -->
+                    <div class="modal fade" id="deleteUserModal{{user.id}}" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Delete User</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure want to delete ?</p>
+                                <p>All user related data also will be deleted like: orders, cart items etc.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a class="btn btn-danger" href="{% url 'delete-user' user.id %}">Confirm Delete</a>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <!-- end Model -->
                     {% endfor %}
                 </tbody>
                 </table>
