[11:22 AM] Pankaj Singh                   Addons fromthe backend
1. in category listing there is no imgs , price ,no. of sold item , rateing

2.banner Api for home page (img and titel)

3. get profile Api

 [11:41 AM] Pankaj Singh
in Adress Api Add Filds --- Phone , Name , Email ID

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -84,6 +84,15 @@
           <span class="sidebar-text">Product FAQs</span>
         </a>
       </li>
+
+      <li class="nav-item {% if request.resolver_match.view_name == 'list_banners' %} active {% endif %}">
+        <a href="{% url 'list_banners' %}" class="nav-link">
+          <span class="sidebar-icon">
+            <i class="fas fa-list"></i>
+          </span>
+          <span class="sidebar-text">Banners</span>
+        </a>
+      </li>
       
       {% endif %}
     </ul>
