reviws apis and backend new product field added in Product

--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -45,6 +45,11 @@
             renderChoiceLimit:500
         });
         
+        var multipleCancelButton1 = new Choices('#id_user', {
+            removeItemButton: true,
+            renderChoiceLimit:500
+        });
+        
     });
 </script>
 {% endblock content %}
