--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -104,6 +104,16 @@
         </a>
       </li>
       
+      <li class="nav-item {% if request.resolver_match.view_name == 'list_reviews' %} active {% endif %}">
+        <a href="{% url 'list_reviews' %}" class="nav-link">
+          <span class="sidebar-icon">
+            <i class="fas fa-list"></i>
+          </span>
+          <span class="sidebar-text">Reviews</span>
+        </a>
+      </li>
+      
+      
       {% endif %}
     </ul>
   </div>
