add field use_for in banner model and api

--- a/templates/ecommerce/banners.html
+++ b/templates/ecommerce/banners.html
@@ -19,6 +19,7 @@
                         <th scope="col" class="sort" data-sort="name">SN</th>
                         <th scope="col" class="sort" data-sort="name">Image</th>
                         <th scope="col" class="sort" data-sort="name">On Page</th>
+                        <th scope="col" class="sort" data-sort="name">Use For</th>
                         <th scope="col" class="sort" data-sort="name">Title</th>
                         <th scope="col">Action</th>
                     </tr>
@@ -34,6 +35,9 @@
                         </td>
                         <td>
                             {{banner.page}}
+                        </td>
+                        <td>
+                            {{banner.use_for}}
                         </td>
                         <td>
                             {{banner.title}}
