--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,7 +12,7 @@
 <nav id="sidebarMenu" class="sidebar d-lg-block bg-gray-800 text-white collapse" data-simplebar>
   <div class="sidebar-inner px-4 pt-3">
     <div>
-      <img src="/static/assets/img/stone-logo.jpg" class="image-md">
+      <img src="/static/assets/img/logo.jpg" class="image-md">
     </div>
     
     <ul class="nav flex-column pt-3 pt-md-0">
