--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -75,56 +75,61 @@
         
         <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
         
-            {% comment %} <span class="text-primary col text-center align-self-center text-lg p-1"> <i class="fas fa-user"></i></span> {% endcomment %}
-            <div class="col p-1">
-                <div class="card-counter info">
-                    <i class="fa fa-users"></i>
-                    <span class="count-numbers">{{total_user}}</span><br/>
-                    <span class="count-name">Total Users</span>
+            <a href="{% url "users" %}">
+                <div class="col p-1">
+                    <div class="card-counter info">
+                        <i class="fa fa-users"></i>
+                        <span class="count-numbers">{{total_user}}</span><br/>
+                        <span class="count-name">Total Users</span>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
 
 
         <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
             {% comment %} <span class="text-success col text-center align-self-center text-lg p-1"><i class="fas fa-calendar"></i> </span> {% endcomment %}
-
-            <div class="col p-1">
-                <div class="card-counter danger">
-                    <i class="fas fa-network-wired"></i>
-                    <span class="count-numbers">{{total_categories}}</span><br/>
-                    <span class="count-name">Total Categories</span>
+            <a href="{% url "list_categories" %}">
+                <div class="col p-1">
+                    <div class="card-counter danger">
+                        <i class="fas fa-network-wired"></i>
+                        <span class="count-numbers">{{total_categories}}</span><br/>
+                        <span class="count-name">Total Categories</span>
+                    </div>
+                    
                 </div>
-                
-            </div>
+            </a>
         </div>
 
         <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
 
             {% comment %} <span class="text-danger fa-coins fa col text-center align-self-center text-lg p-1"></span> {% endcomment %}
-            <div class="col p-1">
-                <div class="card-counter success">
-                    <i class="fas fa-images"></i>
-                    <span class="count-numbers">{{total_products}}</span><br/>
-                    <span class="count-name">Total Products</span>
+            <a href="{% url "list_products" %}">
+                <div class="col p-1">
+                    <div class="card-counter success">
+                        <i class="fas fa-images"></i>
+                        <span class="count-numbers">{{total_products}}</span><br/>
+                        <span class="count-name">Total Products</span>
+                    </div>
+                
                 </div>
-            
-            </div>
+            </a>
         </div>
 
     
         <div class="col row m-1 bg-gradient-lighter rounded p-1 pb-2">
             {% comment %} <span class="text-danger fa fa-money-check-alt text-primary col text-center align-self-center text-lg p-1"></span> {% endcomment %}
+            <a href="{% url "orders" %}">
+                <div class="col p-1">
+                    <div class="card-counter primary">
+                        <i class="fas fa-list"></i>
 
-            <div class="col p-1">
-                <div class="card-counter primary">
-                    <i class="fas fa-list"></i>
-
-                    <span class="count-numbers">{{total_orders}}</span><br/>
-                    <span class="count-name">Total Orders</span>
+                        <span class="count-numbers">{{total_orders}}</span><br/>
+                        <span class="count-name">Total Orders</span>
+                    </div>
+                
                 </div>
-            
-            </div>
+            </a>
         </div>
     </div>
 </div>
