--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,7 @@
 <!-- Primary Meta Tags -->
 
 <title>
-    AstroStone {% block title %}{% endblock %}
+    Gems15 {% block title %}{% endblock %}
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
