--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>AstroStone | Login</title>
+  <title>Gems15 | Login</title>
   <!-- Favicon -->
   <link rel="icon" href="{% static 'assets/img/favicon/mstile-150x150.png' %}" type="image/png">
   <!-- Fonts -->
@@ -42,7 +42,7 @@
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
             <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-              <h1 class="text-white">Welcome! AstroStone Admin</h1>
+              <h1 class="text-white">Welcome! Gems15 Admin</h1>
               <p class="text-lead text-white">Login</p>
             </div>
           </div>
