category title, sub category and video with product specifications in product api

--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -40,6 +40,16 @@
             renderChoiceLimit:500
         }); 
 
+        var multipleCancelButton1 = new Choices('#id_category_title', {
+            removeItemButton: true,
+            renderChoiceLimit:500
+        }); 
+
+        var multipleCancelButton1 = new Choices('#id_sub_category', {
+            removeItemButton: true,
+            renderChoiceLimit:500
+        }); 
+
         var multipleCancelButton1 = new Choices('#id_product', {
             removeItemButton: true,
             renderChoiceLimit:500
